# pipefunc

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  CHANGELOG.md  DEVELOPMENT_NOTES.md  FINAL_REVIEW.md  LICENSE  MANIFEST.in  PLAN.md  PR_REVIEW.md  README.md  RELEASE_NOTES.md  SCANFUNC_FINAL_STATUS.md  SLURM.md  SLURM_REVIEW.md  bug.md  cli-example.py  environment.yml  example.ipynb  executor-propagation-plan.md  get-notebooks.py  mkdocs.yml  noxfile.py  pr-issue.md  pyproject.toml  renovate.json  test_cli.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: add_filename_header.sh  doc-string-check.py  generate-release-notes.py  pr-title-checker-config.json  release-drafter.yml  update-environment.py
.github/workflows/: codeql.yml  codspeed.yml  doc-string-check.yml  draft-pdf.yml  pr-title-checker.yml  prek.yml  pytest-micromamba.yml  pytest-uv.yml  pytest.yml  pythonpublish.yml  release-drafter.yaml  toc.yaml  update-environment.yaml
docs/: Makefile  environment-sphinx.yml  environment.yml  error_handling_examples.md  jupyterlite_config.json
docs/dev/: error-handling-regressions.md  error-handling-simplification-plan.md
docs/source/: adaptive.ipynb  adaptive.md  conf.py  environment.yml  faq.md  index.md  mapspec.md  pipefunc-vs-other-workflow-tools.md  tutorial.md
paper/: paper.bib  paper.md
pipefunc/: __init__.py  _adaptive.py  _autodoc.py  _cache.py  _error_handling.py  _explicit_builder.py  _filearray.py  _lazy.py  _map.py  _mapspec.py  _nested_pipefunc.py  _perf.py  _pipefunc.py  _pipefunc_utils.py  _pipeline.py  _plotting.py  _plotting_utils.py  _profile.py  _resources.py  _run_status.py  _run_status_cli.py  _run_status_heartbeat.py  _scanfunc.py  _scanfunc_iter.py  _simplify.py  _sweep.py  _typing.py  _utils.py  _variant_pipeline.py  _version.py  _widgets.py  cache.py  exceptions.py  helpers.py  lazy.py  mcp.py  pipefunc.code-workspace  resources.py  sweep.py  testing.py  (+2 more)
pipefunc/_pipeline/: __init__.py  _autodoc.py  _base.py  _cache.py  _cli.py  _mapspec.py  _pydantic.py  _simplify.py  _types.py  _validation.py
pipefunc/_widgets/: __init__.py  async_status_widget.py  helpers.py  multi_maps.py  output_tabs.py  pipeline.py  progress.py  progress_base.py  progress_headless.py  progress_ipywidgets.py  progress_rich.py  progress_simple.py  visualize.py
pipefunc/map/: LICENSE  __init__.py  _adaptive.py  _adaptive_lazy_sequence_learner.py  _adaptive_scheduler_slurm_executor.py  _dict_store.py  _dictarray.py  _filearray.py  _load.py  _map.py  _mapspec.py  _prepare.py  _progress.py  _result.py  _run.py  _run_dynamic.py  _run_eager.py  _run_eager_async.py  _run_info.py  _safe_eval.py  _shapes.py  _storage_base.py  _types.py  adaptive.py  adaptive_scheduler.py  serialize.py  xarray.py  zarr.py
pipefunc/static/: graphviz_widget.js
runs/job_03e2874a-73ab-4cfd-a1a7-3114593ad6b0/: run_info.json
runs/job_0dcc5d53-b1da-461d-afa8-f57ed06ec558/: run_info.json
runs/job_1ff8f85a-9985-4573-ad6b-0c265c1facb4/: run_info.json
runs/job_27e9c9d4-62a9-45b7-bd57-c0293b7098b3/: run_info.json
runs/job_305d01fd-a698-466a-b001-82ea49220a7f/: run_info.json
runs/job_42666f40-7af0-4fd0-aad2-5f442f0ca7b1/: run_info.json
runs/job_5bb894ac-b45e-4fb2-b401-4612b1a4e7f6/: run_info.json
runs/job_73d3a67b-b670-4892-921d-18b82f9e78f1/: run_info.json
runs/job_74ecefdf-4dc4-48a9-abbe-05873a290649/: run_info.json
runs/job_85885bab-bfee-44b7-978d-c177694df4f1/: run_info.json
runs/job_8d330054-e34d-4607-8d77-7af903d780f4/: run_info.json
runs/job_9b00b089-7845-45e7-bce0-43acc2029187/: run_info.json
runs/job_bdfb851b-da81-4a47-97b4-e41be9dadfc1/: run_info.json
runs/job_c2e34b15-548a-4033-8b95-3f2eba63a5a1/: run_info.json
runs/job_c522b343-deaa-45b4-8d13-e3fc0973b6fe/: run_info.json
runs/job_cbf784c1-e3a6-46cb-8aea-72863a6be8fc/: run_info.json
runs/job_cdf9bcae-d491-4db9-ba75-a02bb90c7d8f/: run_info.json
runs/job_e6c7f32b-5df6-4be2-8766-fd11b833e711/: run_info.json
test/: run_info.json
test/inputs/: x.cloudpickle
tests/: IMPLEMENTATION_NOTES.md  __init__.py  conftest.py  helpers.py  test_adaptive_lazy_sequence_learner.py  test_adaptive_run.py  test_async_pipefunc.py  test_async_status_widget.py  test_autodoc.py  test_benchmark.py  test_cache.py  test_cache_hash_func.py  test_cache_is_hashable.py  test_cache_memoize.py  test_cache_to_hashable.py  test_cli.py  test_dag.py  test_filearray.py  test_helpers.py  test_helpers_chain.py  test_helpers_linear_chain.py  test_lazy.py  test_map.py  test_mapspec.py  test_mcp.py  test_namedtuple_output.py  test_nested_pipefunc.py  test_output_tabs_widget.py  test_perf.py  test_pipefunc.py  test_pipefunc_annotations.py  test_pipefunc_signature.py  test_pipefunc_utils.py  test_pipeline.py  test_pipeline_annotations.py  test_pipeline_cache.py  test_pipeline_lazy.py  test_pipeline_mapspec.py  test_pipeline_post_execution_hook.py  test_pipeline_resources.py  (+29 more)
tests/integration/: __init__.py  test_error_handling_scan_inputs.py
tests/map/: __init__.py  test_adaptive.py  test_adaptive_run.py  test_adaptive_scheduler.py  test_adaptive_slurm_executor.py  test_async_map_block.py  test_base_filearray.py  test_cache_reraise_single.py  test_cache_result_dict.py  test_chunk_error_indices.py  test_dict_array_sparse.py  test_dynamic_scheduler.py  test_eager_scheduler.py  test_error_handling.py  test_error_handling_basic.py  test_error_handling_coverage.py  test_error_handling_parallel_regressions.py  test_error_handling_storage.py  test_error_reason_domain.py  test_filearray.py  test_fixed_indices.py  test_irregular_array_sum.py  test_irregular_arrays.py  test_irregular_coercion.py  test_irregular_mask_patterns.py  test_irregular_pipeline_public.py  test_irregular_sparse_pipeline.py  test_irregular_storage_helpers.py  test_map.py  test_map_chunking.py  test_mapspec.py  test_pipeline_mapspec.py  test_progress.py  test_regressions_cache_error_handling.py  test_regressions_propagated_root_causes.py  test_regular_regressions.py  test_result.py  test_resume_validation.py  test_reuse_validation.py  (+9 more)
(+179 files in other folders)
