[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "versioningit"]

[project]
name = "pipefunc"
description = "A Python library for defining, managing, and executing function pipelines."
requires-python = ">=3.8"
dynamic = ["version"]
maintainers = [{ name = "Bas Nijholt", email = "bas@nijho.lt" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "networkx",
    "psutil",
    "versioningit",
    "typing_extensions; python_version <= '3.9'",
    "cloudpickle",
]
[project.optional-dependencies]
plotting = ["matplotlib", "pygraphviz", "holoviews", "bokeh"]
test = ["pytest", "coverage", "pytest-cov"]
docs = [
    "myst-nb",
    "sphinx",
    "furo",
    "myst-parser",
    "emoji",
    "jupytext",
    "jupyterlite-sphinx",
    "jupyterlite-xeus-python",
    "pandas",  # used in example.ipynb
]
dev = ["black[jupyter]", "pre-commit", "ruff", "mypy"]
[project.urls]
homepage = "https://pipefunc.readthedocs.io/"
documentation = "https://pipefunc.readthedocs.io/"
repository = "https://github.com/basnijholt/pipefunc"

[project.readme]
content-type = "text/markdown"
file = "README.md"

[tool.versioningit]
default-version = "0.0.0"

[tool.versioningit.onbuild]
build-file = "pipefunc/_version.py"
source-file = "pipefunc/_version.py"

[tool.setuptools.packages.find]
include = ["pipefunc.*", "pipefunc"]

[tool.pytest.ini_options]
addopts = """
    -vvv
    --cov=pipefunc
    --cov-report term
    --cov-report html
    --cov-report xml
    --cov-fail-under=35
"""

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.black]
line_length = 88

[tool.ruff]
line-length = 150
target-version = "py38"
select = ["ALL"]
ignore = [
    "T20",     # flake8-print
    "ANN101",  # Missing type annotation for {name} in method
    "S101",    # Use of assert detected
    "PD901",   # df is a bad variable name. Be kinder to your future self.
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in {name}
    "D402",    # First line should not be the function's signature
    "PLW0603", # Using the global statement to update `X` is discouraged
    "D401",    # First line of docstring should be in imperative mood
    "SLF001",  # Private member accessed
    "S603",    # `subprocess` call: check for execution of untrusted input
    "S607",    # Starting a process with a partial executable path
    "PLR0913", # Too many arguments to function call (N > 5)
    "TD002",   # Missing author in TODO; try: `# TODO(<author_name>): ...`
    "TD003",   # Missing issue link on the line following this TODO
    "FIX002",  # Line contains TODO"
]

[tool.ruff.per-file-ignores]
"tests/*" = ["SLF001", "ANN", "D", "PLR2004"]
"tests/test_examples.py" = ["E501"]
".github/*" = ["INP001"]

[tool.ruff.mccabe]
max-complexity = 18

[tool.mypy]
python_version = "3.8"
